# war_API

./: .env.example  Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
war_api/: asgi.py  settings.py  urls.py  wsgi.py
