[tool.poetry]
name = "war_api"
version = "0.1.0"
description = ""
authors = ["Omar <c.j_omar@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-environ = "^0.11.2"
mysqlclient = "^2.2.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "war_api.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
